// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`+ SidebarComponent.vue tests > Should match the snapshot 1`] = `
"<aside id="sidebar" class="sidebar opacity-100 left-0">
  <upper-header-component-stub isopen="false"></upper-header-component-stub>
  <div class="flex flex-col justify-center items-center w-full lg:p-0 px-8 py-10 text-center text-base">
    <picture><img class="rounded-full w-32 h-32 sm:w-40 sm:h-40 object-cover grayscale hover:grayscale-0 transition-all duration-200" src="/src/assets/avatar-small.jpg" alt="José Duque"></picture><span class="text-2xl font-semibold mt-5 sm:text-xl">José Duque</span><span class="text-gray-500">general.role</span>
    <div class="sidebar-news--container"><i class="icon"><a href="https://github.com" target="_blank">
          <v-icon name="bi-github" scale="1.3" class="fill-gray-400 hover:fill-yellow-500 transition-colors"></v-icon>
        </a></i><i class="icon"><a href="https://linkedin.com" target="_blank">
          <v-icon name="bi-linkedin" scale="1.3" class="fill-gray-400 hover:fill-yellow-500 transition-colors"></v-icon>
        </a></i></div>
    <lang-select-component-stub class="lg:hidden"></lang-select-component-stub>
  </div>
  <ul class="navigation text-right my-5 space-y-2 w-full lg:p-0 px-8 py-10">
    <li><a>general.menu.resume<span><v-icon class="ml-2" name="bi-chevron-right" scale="0.9"></v-icon></span></a></li>
    <li><a>general.menu.services<span><v-icon class="ml-2" name="bi-chevron-right" scale="0.9"></v-icon></span></a></li>
  </ul>
</aside>"
`;

exports[`+ SidebarComponent.vue tests > Should match the snapshot if socialLinks are not given 1`] = `
"<aside id="sidebar" class="sidebar opacity-100 left-0">
  <upper-header-component-stub isopen="false"></upper-header-component-stub>
  <div class="flex flex-col justify-center items-center w-full lg:p-0 px-8 py-10 text-center text-base">
    <picture><img class="rounded-full w-32 h-32 sm:w-40 sm:h-40 object-cover grayscale hover:grayscale-0 transition-all duration-200" src="/src/assets/avatar-small.jpg" alt="José Duque"></picture><span class="text-2xl font-semibold mt-5 sm:text-xl">José Duque</span><span class="text-gray-500">general.role</span>
    <!--v-if-->
    <lang-select-component-stub class="lg:hidden"></lang-select-component-stub>
  </div>
  <ul class="navigation text-right my-5 space-y-2 w-full lg:p-0 px-8 py-10">
    <li><a>general.menu.resume<span><v-icon class="ml-2" name="bi-chevron-right" scale="0.9"></v-icon></span></a></li>
    <li><a>general.menu.services<span><v-icon class="ml-2" name="bi-chevron-right" scale="0.9"></v-icon></span></a></li>
  </ul>
</aside>"
`;
